fix horizontal scroll

--- a/app/layout.scss
+++ b/app/layout.scss
@@ -1,4 +1,4 @@
-html { width: 100%; overflow-x: hidden; }
+html, body { max-width: 100%; overflow-x: hidden; }
 main {
     @media screen and (max-width: $break-gt-xs) {
         margin-top: 50px;
